[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rile"
version = "0.1"
authors = [
  { name="Carlton Shepherd", email="carlton@linux.com" },
]
description = "An instruction-level encryption prototyping framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: System :: Emulators",
    "Programming Language :: Assembly"
]

dependencies = [
    "pyelftools >= 0.29",
    "ascon"
]

[project.urls]
"Homepage" = "https://github.com/cgshep/rile"
"Bug Tracker" = "https://github.com/cgshep/rile/issues"

[project.optional-dependencies]
tests = [
  'pytest>=7.0',
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
